Add man page in mdoc format.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,3 +3,5 @@ slideextract_SOURCES = src/main.c src/slideextract.h src/slideextract.c
 slideextract_LDADD = $(OPENCV_LIBS)
 AM_CFLAGS = -std=c99 -Wall -Wextra -pedantic -D_XOPEN_SOURCE=300 $(OPENCV_CFLAGS)
 
+dist_man_MANS = man/slideextract.1
+
